--- a/templates/signup.html
+++ b/templates/signup.html
@@ -8,5 +8,5 @@
 {% endblock %}
 
 {% block js %}
-	<script src="/static/js/homepage.jsx" type="text/jsx"></script>
+	<script src="/static/js/signup.jsx" type="text/jsx"></script>
 {% endblock %}
