--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} Welcome {% endblock %}
+{% block title %} Recallama Login {% endblock %}
 
 {% block body %}
   <!-- Mount your react components on to this element. -->
