changed create_favorite to create_favorite_food_recall. removed drug as a parameter

--- a/templates/login.html
+++ b/templates/login.html
@@ -4,6 +4,7 @@
 
 {% block body %}
   <!-- Mount your react components on to this element. -->
+  <div id="welcome"></div>
   <div id="app"></div>
 {% endblock %}
 
