--- a/templates/signup.html
+++ b/templates/signup.html
@@ -4,6 +4,7 @@
 
 {% block body %}
   <!-- Mount your react components on to this element. -->
+  <div id="welcome"></div>
   <div id="app"></div>
 {% endblock %}
 
