--- a/templates/signup.html
+++ b/templates/signup.html
@@ -3,11 +3,37 @@
 {% block title %} Welcome {% endblock %}
 
 {% block body %}
-  <!-- Mount your react components on to this element. -->
+
+  <h1> Welcome to Recallama! </h1>
+
+  <h2>Sign up for a Recallama account</h2>
+
+  <div id="signup-form">
+    <form action='/signup' methods="POST">
+      <p>
+        First name <input id='fname' type='text' name='fname' required=True> 
+      </p>
+      <p>
+        Last name <input id='lname' type='password' name='lname' required=True> 
+      </p>
+      <p>
+        Email <input id='email' type='text' name='email' required=True> 
+      </p>
+      <p>
+        Password <input id='password' type='password' name='password' required=True> 
+      </p>
+      <input type='submit'>
+    </form>
+  </div>
+
+  </br> 
+  <a href='/login'>Already have an account? Click here to Login</a>
+
+  <!-- Mount your react components on to this element. 
   <div id="welcome"></div>
-  <div id="app"></div>
+  <div id="app"></div> -->
 {% endblock %}
 
 {% block js %}
-	<script src="/static/js/signup.jsx" type="text/jsx"></script>
+	<!-- <script src="/static/js/signup.jsx" type="text/jsx"></script> -->
 {% endblock %}
