added search form on homepage.html

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -9,6 +9,20 @@
   <button id='loginButton'>Login</button>
   <button id='signupButton'>Signup</button>
 
+  </br>
+
+  <div>
+    <h2> 
+    Search for a recall
+    </h2>
+    <form action='/results' methods="POST">
+      Description<input id='foodRecallDescription' type='text'>
+      Recalling Firm <input id='foodRecallRecallingFirm' type='text'>
+      
+      <input type="submit" value="Search">
+    </form>
+  </div>
+
   <script>
     "use strict";
 
