added more functions for user and food recalls in crud.py

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -15,7 +15,7 @@
     <h2> 
     Search for a recall
     </h2>
-    <form action='/results' methods="POST">
+    <form action='/search/results' methods="POST">
       Description<input id='foodRecallDescription' type='text'>
       Recalling Firm <input id='foodRecallRecallingFirm' type='text'>
       
