--- a/templates/login.html
+++ b/templates/login.html
@@ -10,10 +10,10 @@
   <div id="login-form">
     <form action='/login' methods="POST">
       <p>
-        Email <input id='email' type='text' required=True> 
+        Email <input id='email' type='text' name='email' required=True> 
       </p>
       <p>
-        Password <input id='password' type='password' required=True> 
+        Password <input id='password' type='password' name='password' required=True> 
       </p>
       <input type='submit'>
     </form>
@@ -21,11 +21,11 @@
   </br> 
   <a href='/signup'>Don't have an account? Click here to sign up</a>
 
-  <!-- Mount your react components on to this element. 
-  <div id="welcome"></div>
-  <div id="app"></div> -->
+  <!-- Mount your react components on to this element. -->
+  <!-- <div id="welcome"></div> -->
+  <!-- <div id="app"></div> -->
 {% endblock %}
 
-{% block js %}
+<!-- {% block js %} -->
 	<!-- <script src="/static/js/login.jsx" type="text/jsx"></script> -->
-{% endblock %}
+<!-- {% endblock %} -->
