added <br/> and spacing for forms in signup() and login() on root.jsx; added some todo's for search()

--- a/templates/root.html
+++ b/templates/root.html
@@ -12,5 +12,9 @@
   
   <script src="/static/js/root.jsx" type="text/jsx"></script>
   <link rel='stylesheet' href='/static/mystyle/css'
+  
 
+  <body>
+    <img src='/static/img/recallama.jpg'
+  </body>
 </html>
