deconstructed components and saved them as individual jsx files, added script tags to root.html

--- a/templates/root.html
+++ b/templates/root.html
@@ -9,7 +9,11 @@
 
   <div id="root"></div>
 
-  
+  <script src="/static/js/homepage.jsx" type="text/jsx"></script>
+  <script src="/static/js/signup.jsx" type="text/jsx"></script>
+  <script src="/static/js/login.jsx" type="text/jsx"></script>
+  <script src="/static/js/search.jsx" type="text/jsx"></script>
+  <script src="/static/js/results.jsx" type="text/jsx"></script>
   <script src="/static/js/root.jsx" type="text/jsx"></script>
   <link rel='stylesheet' href='/static/mystyle/css'
   
