added same signup logic to login.jsx and search.jsx; make forms fully controlled

--- a/templates/root.html
+++ b/templates/root.html
@@ -15,10 +15,10 @@
   <script src="/static/js/search.jsx" type="text/jsx"></script>
   <script src="/static/js/results.jsx" type="text/jsx"></script>
   <script src="/static/js/root.jsx" type="text/jsx"></script>
-  <link rel='stylesheet' href='/static/mystyle/css'
+  <!-- <link rel='stylesheet' href='/static/mystyle/css' -->
   
 
   <body>
-    <img src='/static/img/recallama.jpg'
+    <!-- <img src='/static/img/recallama.jpg' -->
   </body>
 </html>
