--- a/templates/root.html
+++ b/templates/root.html
@@ -1,6 +1,12 @@
 <!-- for React -->
 <!doctype html>
 <html>
+  <script>
+    window.user_id = {{ session.get("user", "null") }}; 
+    window.user_name = "{{ session.get("user_name", "null")}}";
+    console.log(window.user_id);
+    console.log(window.user_name);
+  </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.js" crossorigin></script>
   <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
@@ -17,8 +23,13 @@
   <script src="/static/js/root.jsx" type="text/jsx"></script>
   <!-- <link rel='stylesheet' href='/static/mystyle/css' -->
   
-
+  
   <body>
     <!-- <img src='/static/img/recallama.jpg' -->
+    {% for msg in get_flashed_messages() %}
+      <p class="flash-msg">
+        {{ msg }}
+      </p>
+    {% endfor %}
   </body>
 </html>
