--- a/templates/root.html
+++ b/templates/root.html
@@ -15,11 +15,11 @@
 
   <div id="root"></div>
 
-  <script src="/static/js/homepage.jsx" type="text/jsx"></script>
-  <script src="/static/js/signup.jsx" type="text/jsx"></script>
-  <script src="/static/js/login.jsx" type="text/jsx"></script>
-  <script src="/static/js/search.jsx" type="text/jsx"></script>
-  <script src="/static/js/results.jsx" type="text/jsx"></script>
+  <script src="/static/js/components/homepage.jsx" type="text/jsx"></script>
+  <script src="/static/js/components/signup.jsx" type="text/jsx"></script>
+  <script src="/static/js/components/login.jsx" type="text/jsx"></script>
+  <script src="/static/js/components/search.jsx" type="text/jsx"></script>
+  <script src="/static/js/components/results.jsx" type="text/jsx"></script>
   <script src="/static/js/root.jsx" type="text/jsx"></script>
   <!-- <link rel='stylesheet' href='/static/mystyle/css' -->
   
