--- a/templates/search.html
+++ b/templates/search.html
@@ -9,4 +9,7 @@
 
 {% block js %}
 	<script src="/static/js/search.jsx" type="text/jsx"></script>
+  <script type="text/javascript">
+    var data = data
+  </script>
 {% endblock %}
