--- a/templates/search.html
+++ b/templates/search.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'root.html' %}
 
 {% block title %} Welcome {% endblock %}
 
@@ -9,7 +9,6 @@
 
 {% block js %}
 	<script src="/static/js/search.jsx" type="text/jsx"></script>
-  <script type="text/javascript">
-    var data = data
-  </script>
+
+  { data }
 {% endblock %}
