--- a/templates/root.html
+++ b/templates/root.html
@@ -6,6 +6,7 @@
     window.user_name = "{{ session.get("user_name", "null")}}";
     <!-- console.log(window.user_id); -->
     <!-- console.log(window.user_name); -->
+    <!-- window.result = {{ session.get("result")}}; -->
   </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.js" crossorigin></script>
   <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
@@ -18,10 +19,10 @@
   <script src="/static/js/components/homepage.jsx" type="text/jsx"></script>
   <script src="/static/js/components/signup.jsx" type="text/jsx"></script>
   <script src="/static/js/components/login.jsx" type="text/jsx"></script>
+  
+  <script src="/static/js/components/search.jsx" type="text/jsx"></script>
   <script src="/static/js/components/results.jsx" type="text/jsx"></script>
-  <script src="/static/js/components/search.jsx" type="text/jsx">
-
-  </script>
+  
   <script src="/static/js/root.jsx" type="text/jsx"></script>
   <!-- <link rel='stylesheet' href='/static/mystyle/css' -->
   
