placed all function components in root.jsx, commented out script tags in root.html; got the search form to work. working on profile

--- a/templates/root.html
+++ b/templates/root.html
@@ -16,12 +16,12 @@
 
   <div id="root"></div>
 
-  <script src="/static/js/components/homepage.jsx" type="text/jsx"></script>
-  <script src="/static/js/components/signup.jsx" type="text/jsx"></script>
-  <script src="/static/js/components/login.jsx" type="text/jsx"></script>
+  <!-- <script src="/static/js/components/homepage.jsx" type="text/jsx"></script> -->
+  <!-- <script src="/static/js/components/signup.jsx" type="text/jsx"></script> -->
+  <!-- <script src="/static/js/components/login.jsx" type="text/jsx"></script> -->
   
-  <script src="/static/js/components/search.jsx" type="text/jsx"></script>
-  <script src="/static/js/components/results.jsx" type="text/jsx"></script>
+  <!-- <script src="/static/js/components/search.jsx" type="text/jsx"></script> -->
+  <!-- <script src="/static/js/components/results.jsx" type="text/jsx"></script> -->
   
   <script src="/static/js/root.jsx" type="text/jsx"></script>
   <!-- <link rel='stylesheet' href='/static/mystyle/css' -->
